Updated frontpage with carousel and added inquiries to homepage

--- a/index.html
+++ b/index.html
@@ -104,9 +104,58 @@
                     </table>
                 </div>
                 <div class="col-lg-8">
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                                <center>
+                                    <figure>
+                                        <img src="img/motivania.PNG" class="" alt="...">
+                                        <figcaption>Photo of a javascript project that interacted with an api used for a Web Application course at Trent University</figcaption>
+                                    </figure>
+                                </center>
+                          </div>
+                          <div class="carousel-item">
+                            <center>
+                                <figure>
+                                    <img src="img/GanttChartProjectManagement.PNG" class="carousel-image" alt="...">
+                                    <figcaption>Example Gantt Chart I made in a project management course at Trent University</figcaption>
+                                </figure>
+                            </center>
+                          </div>
+                          <div class="carousel-item">
+                            <center>
+                                <figure>
+                                    <img src="img/3400ChartLab2.png" class="d-block w-100" alt="...">
+                                    <figcaption>Entity Relationship Diagrams I made for a lab in a database course at Trent University</figcaption>
+                                </figure>
+                            </center>
+                          </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="sr-only">Next</span>
+                        </a>
+                      </div>
+                      
                     <h2>Biography</h2>
                     <p>
-                        Evan Campbell-Weiner is a Canadian Software Developer/Web Developer currently enrolled at Trent University for a BSc Honours in Computing Systems co-op.
+                        I am a Canadian Software Developer/Web Developer currently enrolled at Trent University for a BSc Honours in Computing Systems co-op.
+                    </p>
+
+                    <h2>Inquiries?</h2>
+                    <p>
+                       If you are interested in contacting me about co-op opportunities, jobs, or freelance work please see the contact me page <a href="contact.html" class="text-info text-underlined">here</a>.
+                       I will reply to any messages through linkedin or the google form as soon as possible. 
+                    </p>
+
+                    <h2>Navigating the Cite</h2>
+                    <p>
+                       If you are interested in contacting me about co-op opportunities, jobs, or freelance work please see the contact me page <a href="contact.html" class="text-info text-underlined">here</a>.
+                       I will reply to any messages through linkedin or the google form as soon as possible. 
                     </p>
 
                 </div>
@@ -117,5 +166,8 @@
             &copy 2020 Evan Campbell-Weiner
         </div>
     </div>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
 </html>
