--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,9 @@
             </div>
         </div>
         <div class="card-body">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZNBVCkFSZTmSBPdGg3LHOK75toDoyxf1hEZ8-k4K2P3SjOw/viewform?embedded=true" width="640" height="677" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+              <a href="https://ca.linkedin.com/in/evancampbellweiner" class="btn btn-primary btn-lg active w-100 mb-2" role="button" aria-pressed="true" ><i class="fab fa-linkedin"></i> LinkedIn</a>
+              <a href="https://github.com/EvanCampbellWeiner" class="btn btn-primary btn-lg active w-100 mb-2" role="button" aria-pressed="true" ><i class="fab fa-github"></i> Github</a>
+              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZNBVCkFSZTmSBPdGg3LHOK75toDoyxf1hEZ8-k4K2P3SjOw/viewform?embedded=true" class="w-100" height="677" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
         </div>
         <div class="card-footer">
             &copy 2020 Evan Campbell-Weiner
