Got rid of center attribute and replaced with flexbox. Also began work on resume

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/9d16a026fe.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="text-light">
     <div class="card bg-dark m-2">
         <div class="card-header">
             <h1 class='mb-2 ml-4 '>Evan Campbell-Weiner</h1>
@@ -107,28 +107,28 @@
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                                <center>
+                                <div class="d-flex justify-content-around">
                                     <figure>
                                         <img src="img/motivania.PNG" class="" alt="...">
                                         <figcaption>Photo of a javascript project that interacted with an api used for a Web Application course at Trent University</figcaption>
                                     </figure>
-                                </center>
+                                </div>
                           </div>
                           <div class="carousel-item">
-                            <center>
+                            <div class="d-flex justify-content-around">
                                 <figure>
                                     <img src="img/GanttChartProjectManagement.PNG" class="carousel-image" alt="...">
                                     <figcaption>Example Gantt Chart I made in a project management course at Trent University</figcaption>
                                 </figure>
-                            </center>
+                            </div>
                           </div>
                           <div class="carousel-item">
-                            <center>
+                            <div class="d-flex justify-content-around">
                                 <figure>
                                     <img src="img/3400ChartLab2.png" class="d-block w-100" alt="...">
                                     <figcaption>Entity Relationship Diagrams I made for a lab in a database course at Trent University</figcaption>
                                 </figure>
-                            </center>
+                            </div>
                           </div>
                         </div>
                         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -140,13 +140,15 @@
                           <span class="sr-only">Next</span>
                         </a>
                       </div>
-                      
-                    <h2>Biography</h2>
+                      <div class="d-flex justify-content-around w-50">
+                        <h2>Biography</h2>
+                      </div>
                     <p>
-                        I am a Canadian Software Developer/Web Developer currently enrolled at Trent University for a BSc Honours in Computing Systems co-op.
+                        I am a Software Developer/Web Developer currently enrolled at Trent University for a BSc Honours in Computing Systems co-op.
                     </p>
-
-                    <h2>Inquiries?</h2>
+                    <div class="d-flex justify-content-around w-50">
+                         <h2>Inquiries?</h2>
+                    </div>
                     <p>
                        If you are interested in contacting me about co-op opportunities, jobs, or freelance work please see the contact me page <a href="contact.html" class="text-info text-underlined">here</a>.
                        I will reply to any messages through linkedin or the google form as soon as possible. 
