--- a/resume.html
+++ b/resume.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/9d16a026fe.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="text-light">
     <div class="card bg-dark m-2">
         <div class="card-header">
-            <h1 class='mb-2 ml-4 '>Evan Campbell-Weiner</h1>
+            <h1 class='mb-2 ml-4'>Resume</h1>
             <div class="col-md-6">
                 <nav class="navbar navbar-dark">
                     <a class="navbar-brand" href="index.html"><i class="fas fa-home"></i> Home</a>
@@ -23,13 +23,30 @@
             </div>
         </div>
         <div class="card-body">
-           
-            This page is currently under development. Please check back soon or contact Evan (see contact page) for more information on Evan's resume.
-
+          <div class="row">
+            <div class="col-sm-12 d-flex justify-content-around">
+              <h1>Evan Campbell-Weiner</h1>
+            </div> 
+            <div class="col-sm-12 d-flex justify-content-around">    
+              <div class="jumbotron w-50 text-dark">
+                <div class="d-flex justify-content-around">
+                  <h2>Summary of Qualifications</h2>
+                </div>
+                <ul class="align-self-left">
+                  <li>Experienced with Web Development (including HTML, CSS, Javascript, PHP, MySQL, +)</li>
+                  <li>Worked on a number of development projects</li>
+                  <li>Extensive leadership experience in team-based settings</li>
+                  <li>Strong initiative to work individually and cooperatively in a work environment</li>
+                  <li>Knowledge of problem solving skills in software development</li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="card-footer">
-            &copy 2020 Evan Campbell-Weiner
-        </div>
+      </div>
+      <div class="card-footer">
+          &copy 2020 Evan Campbell-Weiner
+      </div>
     </div>
   </body>
 </html>
