--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/9d16a026fe.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="text-light">
     <div class="card bg-dark m-2">
         <div class="card-header">
             <h1 class='mb-2 ml-4 '>Evan Campbell-Weiner</h1>
@@ -25,7 +25,9 @@
         <div class="card-body">
               <a href="https://ca.linkedin.com/in/evancampbellweiner" class="btn btn-primary btn-lg active w-100 mb-2" role="button" aria-pressed="true" ><i class="fab fa-linkedin"></i> LinkedIn</a>
               <a href="https://github.com/EvanCampbellWeiner" class="btn btn-primary btn-lg active w-100 mb-2" role="button" aria-pressed="true" ><i class="fab fa-github"></i> Github</a>
-              <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZNBVCkFSZTmSBPdGg3LHOK75toDoyxf1hEZ8-k4K2P3SjOw/viewform?embedded=true" class="w-100" height="677" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+              <div class="d-flex justify-content-around">
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZNBVCkFSZTmSBPdGg3LHOK75toDoyxf1hEZ8-k4K2P3SjOw/viewform?embedded=true" class="w-50" height="677" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+              </div> 
         </div>
         <div class="card-footer">
             &copy 2020 Evan Campbell-Weiner
