Updated resume page

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
               </div> 
         </div>
         <div class="card-footer">
-            &copy 2020 Evan Campbell-Weiner
+            &copy; 2020 Evan Campbell-Weiner
         </div>
     </div>
   </body>
