--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/9d16a026fe.js" crossorigin="anonymous"></script>
   </head>
   <body>
-    <div class="card bg-dark m-2">
+    <div class="card bg-dark text-white m-2">
         <div class="card-header">
             <h1 class='mb-2 ml-4 '>Evan Campbell-Weiner</h1>
             <div class="col-md-6">
