--- a/resume.html
+++ b/resume.html
@@ -1,52 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>ECW</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-    <script src="https://kit.fontawesome.com/9d16a026fe.js" crossorigin="anonymous"></script>
-  </head>
-  <body class="text-light">
-    <div class="card bg-dark m-2">
-        <div class="card-header">
-            <h1 class='mb-2 ml-4'>Resume</h1>
-            <div class="col-md-6">
-                <nav class="navbar navbar-dark">
-                    <a class="navbar-brand" href="index.html"><i class="fas fa-home"></i> Home</a>
-                    <a class="navbar-brand" href="resume.html"><i class="fas fa-user-tie"></i> Resume</a>
-                    <a class="navbar-brand" href="projects.html"><i class="fas fa-project-diagram"></i> Projects</a>
-                    <a class="navbar-brand" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
-                </nav>
-            </div>
-        </div>
-        <div class="card-body">
-          <div class="row">
-            <div class="col-sm-12 d-flex justify-content-around">
-              <h1>Evan Campbell-Weiner</h1>
-            </div> 
-            <div class="col-sm-12 d-flex justify-content-around">    
-              <div class="jumbotron w-50 text-dark">
-                <div class="d-flex justify-content-around">
-                  <h2>Summary of Qualifications</h2>
-                </div>
-                <ul class="align-self-left">
-                  <li>Experienced with Web Development (including HTML, CSS, Javascript, PHP, MySQL, +)</li>
-                  <li>Worked on a number of development projects</li>
-                  <li>Extensive leadership experience in team-based settings</li>
-                  <li>Strong initiative to work individually and cooperatively in a work environment</li>
-                  <li>Knowledge of problem solving skills in software development</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="card-footer">
-          &copy 2020 Evan Campbell-Weiner
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>ECW</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="https://kit.fontawesome.com/9d16a026fe.js" crossorigin="anonymous"></script>
+</head>
+
+<body class="text-light">
+  <div class="card bg-dark m-2">
+    <div class="card-header">
+      <h1 class='mb-2 ml-4'>Resume</h1>
+      <div class="col-md-6">
+        <nav class="navbar navbar-dark">
+          <a class="navbar-brand" href="index.html"><i class="fas fa-home"></i> Home</a>
+          <a class="navbar-brand" href="resume.html"><i class="fas fa-user-tie"></i> Resume</a>
+          <a class="navbar-brand" href="projects.html"><i class="fas fa-project-diagram"></i> Projects</a>
+          <a class="navbar-brand" href="contact.html"><i class="fas fa-envelope"></i> Contact</a>
+        </nav>
       </div>
     </div>
-  </body>
+    <div class="card-body">
+      <div class="row">
+        <div class="col-sm-12 d-flex justify-content-around">
+          <h1>Evan Campbell-Weiner</h1>
+        </div>
+        <div class="col-sm-12 mt-4 d-flex justify-content-around">
+          <div class="jumbotron w-100 p-2 border bg-dark">
+            <div class="d-flex justify-content-around">
+              <h2>Summary of Qualifications</h2>
+            </div>
+            <ul class="center align-self-left">
+              <li>Experienced with Web Development (including HTML, CSS, Javascript, PHP, MySQL, +)</li>
+              <li>Worked on a number of development projects</li>
+              <li>Extensive leadership experience in team-based settings</li>
+              <li>Strong initiative to work individually and cooperatively in a work environment</li>
+              <li>Knowledge of problem solving skills in software development</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-sm-12 d-flex justify-content-around">
+          <h2>Current Education</h2>
+        </div>
+        <div class="col-sm-12 d-flex flex-column justify-content-start">
+          <div class="d-flex justify-content-between">
+            <h3>BSc Honours in Computing Systems Co-op</h3>
+            <h3>2018-Present</h3>
+          </div>
+          Trent University, Peterborough ON
+        </div>
+        <div class="col-sm-12 d-flex flex-column justify-content-start">
+          <!-- Classes -->
+          <div class="d-flex mt-4 justify-content-between">
+            <h3>Relevant courses</h3>
+          </div>
+          <ul class="courses">
+            <li>Third Year Web Applications Development 
+              <ul>
+                <li>Utilized HTML/CSS/PHP to develop a quiz using phpMyAdmin/MySQL</li>
+                <li>Worked with PHP/jQuery/Javascript/MySQL to create an e-book storage system. </li>
+              </ul>
+            </li>
+            <li>Third Year Project Management
+              <ul>
+                <li>Utilized SCRUM and AGILE techniques in small groups to develop a presentation</li>
+                <li>Focused on identifying Project Management as Risk Management</li>
+              </ul>
+            </li>
+            <li>Third Year Databases
+              <ul>
+                <li>Used PHPMyAdmin, and MySQL to implement relational databases</li>
+                <li>Learned techniques like ER Diagrams, DB Security, DB Normalization, etc.</li>
+              </ul>
+            </li>
+            <li>Second Year Data Structures and Algorithms
+              <ul>
+                <li>Implemented various Data Structures including:
+                  <ul>
+                    <li>BST, Linked List, Circular Lists, Binary Heap, AVL Tree</li>
+                  </ul>
+                </li>
+                <li>Utilized Order of Growth techniques to create more efficient algorithms.</li>
+              </ul>
+            </li>
+            <li>Second Year Data Structures and Algorithms
+              <ul>
+                <li>Utilized Java, JavaFX, and SQLite to implement a Dungeon Crawler game</li>
+                <li>Worked through the full software process using Git for Version Controls</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+
+        <div class="col-sm-12 d-flex justify-content-around">
+          <h2>Relevant Experience</h2>
+        </div>
+        <div class="col-sm-12 d-flex flex-column justify-content-start">
+          <!-- iApotheca -->
+          <div class="d-flex mt-4 justify-content-between">
+            <h3>Co-op Student</h3>
+            <h3>September - December 2019</h3>
+          </div>
+          iApotheca Healthcare, Peterborough ON
+          <ul>
+            <li>Develop a Customer Relationship Management System with Laravel / Vue JS</li>
+            <li>Update a codeigniter reporting system with Vue JS</li>
+            <li>Setup a Digital Ocean Droplet with Ubuntu/LAMP stack</li>
+            <li>Work collaboratively with Git/Bitbucket for Version Control</li>
+          </ul>
+
+          <!-- Unicamp -->
+          <div class="d-flex mt-4 justify-content-between">
+            <h3>Counselor in Training Facilitator</h3>
+            <h3>July - August 2018</h3>
+          </div>
+          Unicamp of Ontario, Honeywood ON
+          <ul>
+            <li>Facilitated and supported 14 youth to become better Camp Counselors and Staff members</li>
+            <li>Planned and led three workshops a day on various staff related responsibilities</li>
+            <li>Organized the CIT’s to help counsellors with campers</li>
+          </ul>
+
+          <!-- Peterborough Youth Council -->
+          <div class="d-flex mt-4 justify-content-between">
+            <h3>Peterborough Youth Council Chair</h3>
+            <h3>2015 - 2017</h3>
+          </div>
+          <div class="d-flex justify-content-between">
+            <h3>Peterborough Youth Council Vice-Chair</h3>
+            <h3>2014 - 2015</h3>
+          </div>
+          <div class="d-flex justify-content-between">
+            <h3>Peterborough Youth Council Member</h3>
+            <h3>2012 - 2014</h3>
+          </div>
+            City of Peterborough, Peterborough ON
+          <ul>
+            <li>Organized, attended, and facilitated monthly meetings for the council</li>
+            <li>Represented youth on committees including the Peterborough Youth Commission 
+              and Peterborough’s National Youth Week planning committee
+            </li>
+            <li>Planned and led youth events such as Litterly Art, Global Youth Day Peterborough, etc.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="card-footer">
+    &copy; 2020 Evan Campbell-Weiner
+  </div>
+  </div>
+</body>
+
 </html>
