--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>ECW</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://kit.fontawesome.com/9d16a026fe.js" crossorigin="anonymous"></script>
-  </head>
-  <body class="text-light">
+</head>
+
+<body class="text-light">
     <div class="card bg-dark m-2">
         <div class="card-header">
             <h1 class='mb-2 ml-4 '>Evan Campbell-Weiner</h1>
@@ -36,67 +39,78 @@
                             </tr>
                             <tr>
                                 <td>HTML/CSS</td>
-                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>Bootstrap 4.0</td>
                                 <td></td>
-                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>PHP</td>
-                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>Laravel</td>
-                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>Javascript/jQuery</td>
                                 <td></td>
-                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>Vue js</td>
                                 <td></td>
-                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>MySQL</td>
                                 <td></td>
-                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>C#</td>
-                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>Java</td>
                                 <td></td>
-                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                             </tr>
                             <tr>
                                 <td>C</td>
                                 <td></td>
                                 <td></td>
-                                <td><span class="badge badge-pill badge-warning"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-warning"><i class="fas fa-check"></i></span>
+                                </td>
                             </tr>
                             <tr>
                                 <td>Git</td>
-                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span></td>
+                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                                 <td></td>
                             </tr>
@@ -106,52 +120,65 @@
                 <div class="col-lg-8">
                     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
                         <div class="carousel-inner">
-                          <div class="carousel-item active">
+                            <div class="carousel-item active">
                                 <div class="d-flex justify-content-around">
-                                    <figure>
-                                        <img src="img/motivania.PNG" class="" alt="...">
-                                        <figcaption>Photo of a javascript project that interacted with an api used for a Web Application course at Trent University</figcaption>
+                                     <figure>
+                                        <div class="d-flex justify-content-around">
+                                            <img src="img/motivania.PNG" class="" alt="...">
+                                        </div>
+                                        <figcaption>Photo of a javascript project that interacted with an api used for a
+                                            Web Application course at Trent University</figcaption>
                                     </figure>
                                 </div>
-                          </div>
-                          <div class="carousel-item">
-                            <div class="d-flex justify-content-around">
-                                <figure>
-                                    <img src="img/GanttChartProjectManagement.PNG" class="carousel-image" alt="...">
-                                    <figcaption>Example Gantt Chart I made in a project management course at Trent University</figcaption>
-                                </figure>
                             </div>
-                          </div>
-                          <div class="carousel-item">
-                            <div class="d-flex justify-content-around">
-                                <figure>
-                                    <img src="img/3400ChartLab2.png" class="d-block w-100" alt="...">
-                                    <figcaption>Entity Relationship Diagrams I made for a lab in a database course at Trent University</figcaption>
-                                </figure>
+                            <div class="carousel-item">
+                                <div class="d-flex justify-content-around">
+                                    <figure>
+                                        <div class="d-flex justify-content-around">
+                                            <img src="img/GanttChartProjectManagement.PNG" class="carousel-image" alt="...">
+                                        </div>
+                                        <figcaption>Example Gantt Chart I made in a project management course at Trent
+                                            University</figcaption>
+                                    </figure>
+                                </div>
                             </div>
-                          </div>
+                            <div class="carousel-item">
+                                <div class="d-flex justify-content-around">
+                                    <figure>
+                                        <div class="d-flex justify-content-around">
+                                             <img src="img/3400ChartLab2.png" class="d-block w-100" alt="...">
+                                        </div>
+                                        <figcaption>Entity Relationship Diagrams I made for a lab in a database course at
+                                            Trent University</figcaption>
+                                    </figure>
+                                </div>
+                            </div>
                         </div>
-                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Previous</span>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button"
+                            data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                          <span class="sr-only">Next</span>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button"
+                            data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
                         </a>
-                      </div>
-                      <div class="d-flex justify-content-around w-50">
+                    </div>
+                    <div class="d-flex justify-content-left w-50">
                         <h2>Biography</h2>
-                      </div>
-                    <p>
-                        I am a Software Developer/Web Developer currently enrolled at Trent University for a BSc Honours in Computing Systems co-op.
-                    </p>
-                    <div class="d-flex justify-content-around w-50">
-                         <h2>Inquiries?</h2>
                     </div>
                     <p>
-                       If you are interested in contacting me about co-op opportunities, jobs, or freelance work please see the contact me page <a href="contact.html" class="text-info text-underlined">here</a>.
-                       I will reply to any messages through linkedin or the google form as soon as possible. 
+                        I am a Software Developer/Web Developer currently enrolled at Trent University for a BSc Honours
+                        in Computing Systems co-op.
+                    </p>
+                    <div class="d-flex justify-content-left w-50">
+                        <h2>Inquiries?</h2>
+                    </div>
+                    <p>
+                        If you are interested in contacting me about co-op opportunities, jobs, or freelance work please
+                        see the contact me page <a href="contact.html" class="text-info text-underlined">here</a>.
+                        I will reply to any messages through linkedin or the google form as soon as possible.
                     </p>
 
                 </div>
@@ -159,11 +186,18 @@
 
         </div>
         <div class="card-footer">
-            &copy 2020 Evan Campbell-Weiner
+            &copy; 2020 Evan Campbell-Weiner
         </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+    </script>
+</body>
+
 </html>
