Added projects to projects page. Added example error page.

--- a/index.html
+++ b/index.html
@@ -45,13 +45,6 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>Bootstrap 4.0</td>
-                                <td></td>
-                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
-                                </td>
-                                <td></td>
-                            </tr>
-                            <tr>
                                 <td>PHP</td>
                                 <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span>
                                 </td>
@@ -74,8 +67,8 @@
                             </tr>
                             <tr>
                                 <td>Vue js</td>
-                                <td></td>
-                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
+                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></td>
+                                <td></span>
                                 </td>
                                 <td></td>
                             </tr>
@@ -103,9 +96,22 @@
                             <tr>
                                 <td>C</td>
                                 <td></td>
+                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></td>
                                 <td></td>
-                                <td><span class="badge badge-pill badge-warning"><i class="fas fa-check"></i></span>
+                            </tr>
+                            <tr>
+                                <td>Python</td>
+                                <td>
                                 </td>
+                                <td></td>
+                                <td><span class="badge badge-pill badge-warning"><i class="fas fa-check"></i></span></td>
+                            </tr>
+                            <tr>
+                                <td>R</td>
+                                <td>
+                                </td>
+                                <td></td>
+                                <td><span class="badge badge-pill badge-warning"><i class="fas fa-check"></i></span></td>
                             </tr>
                             <tr>
                                 <td>Git</td>
@@ -170,7 +176,14 @@
                     </div>
                     <p>
                         I am a Software Developer/Web Developer currently enrolled at Trent University for a BSc Honours
-                        in Computing Systems co-op.
+                        in Computer Science co-op.
+                    </p>
+                    <div class="d-flex justify-content-left w-50">
+                        <h2>Learning Currently</h2>
+                    </div>
+                    <p>
+                       Currently I am taking the following five courses: Data Mining, Comparative Programming Languages, Data Visualization,
+                       Software Specifications and Development, and Formal Languages and Automation.
                     </p>
                     <div class="d-flex justify-content-left w-50">
                         <h2>Inquiries?</h2>
