--- a/projects.html
+++ b/projects.html
@@ -22,13 +22,105 @@
                 </nav>
             </div>
         </div>
-        <div class="card-body">
-            This page is currently under development. Please check back soon or contact Evan (see contact page) for more information on Evan's projects.
+        <div id="app" class="card-body">
+          <div class="row">
+            <!-- Flashcard Extension-->
+            <div class="col-lg-3 mt-2">
+              <div class="card text-white bg-dark border-white">
+                <img class="card-img-top projectimage" src="img/flashcardextension.png" alt="Image of Flashcard Extension">
+                <div class="card-body">
+                  <h5 class="card-title">Flashcard Extension</h5>
+                  <p class="card-text">This chrome flashcard extension came 2nd and won audience choice in the Hackworks HackInstead Hackathon in August 2020.
+                    </p>
+                  <a href="https://github.com/EvanCampbellWeiner/flashcards" class="btn btn-light"><i class="fab fa-github"></i> Github</a> 
+                </div>
+              </div>
+            </div>
 
+            <!-- Lara-Admin-Starter -->
+            <div class="col-lg-3 mt-2">
+              <div class="card text-white bg-dark border-white">
+                <img class="card-img-top projectimage" src="img/laraadminstarter.PNG" alt="Image of JETA Dungeon Crawler">
+                <div class="card-body">
+                  <h5 class="card-title">Lara-Admin-Starter</h5>
+                  <p class="card-text">This Laravel/Vue CRM Template was created with 
+                    David Hallin during my time at <a href="https://www.iapotheca.com/">iApotheca</a>.</p>
+                  <a href="https://github.com/hallindavid/lara-admin-starter" class="btn btn-light"><i class="fab fa-github"></i> Github</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- JETA Dungeon Game-->
+            <div class="col-lg-3 mt-2">
+              <div class="card text-white bg-dark border-white">
+                <img class="card-img-top projectimage" src="img/JETABattleScreenshot.PNG" alt="Image of JETA Dungeon Crawler">
+                <div class="card-body">
+                  <h5 class="card-title">JETA Dungeon Game</h5>
+                  <p class="card-text">This project was a dungeon crawler video game created using Java/Java FX by myself, Jared Cormac, Alan Bradshaw, and Thomas Tantalo.</p>
+                  <a href="https://github.com/EvanCampbellWeiner/JETADungeonGame" class="btn btn-light"><i class="fab fa-github"></i> Github</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- BCW Books-->
+            <div class="col-lg-3 mt-2">
+              <div class="card text-white bg-dark border-white">
+                <img class="card-img-top projectimage" src="img/bcwbooks.jpg" alt="Image of BCW Books Storage System">
+                <div class="card-body">
+                  <h5 class="card-title">BCW Books</h5>
+                  <p class="card-text">This project was a book storage system created with Alan Bradshaw for our Web Development course. We primarily used PHP and JS.</p>
+                  <a href="https://github.com/EvanCampbellWeiner/BCWBooks" class="btn btn-light"><i class="fab fa-github"></i> Github</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <!-- Motivania -->
+            <div class="col-lg-3 mt-2">
+              <div class="card text-white bg-dark border-white">
+                <img class="card-img-top projectimage" src="img/motivania.png" alt="Image of a Javascript Motivania game">
+                <div class="card-body">
+                  <h5 class="card-title">Motivania</h5>
+                  <p class="card-text">A Javascript/jQuery application created by myself using boredAPI.</p>
+                  <a href="motivania/motivania.html" class="btn btn-success">Live Demo!</a>
+                </div>
+              </div>
+            </div>  
+
+            <!-- C# Data Structures -->
+            <div class="col-lg-3 mt-2">
+              <div class="card text-white bg-dark border-white">
+                <img class="card-img-top projectimage" src="img/avltree.jpg" alt="Image of AVL Tree">
+                <div class="card-body">
+                  <h5 class="card-title">C# Data Structures</h5>
+                  <p class="card-text">These BST, RB Tree, AVL Tree, Splay Tree, etc. were created for my second year course in C#. All repositories are private to protect the Intellectual Property of the instructors assignment.</p>
+                  <a href="example.html" class="btn btn-primary">Learn More!</a>
+                </div>
+              </div>
+            </div>
+
+            <!-- C FIFO Pipes -->
+            <div class="col-lg-3 mt-2">
+              <div class="card text-white bg-dark border-white">
+                <img class="card-img-top projectimage" src="img/fifopipe.PNG" alt="Image of a test for my c program">
+                <div class="card-body">
+                  <h5 class="card-title">C FIFO Pipes</h5>
+                  <p class="card-text">This was a C program created for a third year course. All repositories are private to protect the Intellectual Property of the instructors assignment. </p>
+                  <a href="example.html" class="btn btn-primary">Learn More!</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
         </div>
+
         <div class="card-footer">
             &copy 2020 Evan Campbell-Weiner
         </div>
     </div>
   </body>
+  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+  <script src="js/app.js"></script>
+
 </html>
