Updated resume, Updated main page biography, and added my most recent project (plastic oceans)

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-lg-4">
-                    <img src="img/FancyEvan.jpg" alt=" Evan dressed in a suit">
+                    <img src="img/FancyEvan.jpg" alt=" Evan dressed in a suit" id="fancyevan">
                     <table>
                         <tbody>
                             <tr>
@@ -52,31 +52,9 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td>Laravel</td>
-                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span>
-                                </td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
                                 <td>Javascript/jQuery</td>
-                                <td></td>
-                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
-                                </td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>Vue js</td>
                                 <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></td>
-                                <td></span>
-                                </td>
                                 <td></td>
-                            </tr>
-                            <tr>
-                                <td>MySQL</td>
-                                <td></td>
-                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
-                                </td>
                                 <td></td>
                             </tr>
                             <tr>
@@ -94,9 +72,37 @@
                                 <td></td>
                             </tr>
                             <tr>
+                                <td>MySQL</td>
+                                <td></td>
+                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
+                                </td>
+                                <td></td>
+                            </tr>
+                             <tr>
+                                <td>Laravel</td>
+                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></span>
+                                </td>
+                                <td></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Vue js</td>
+                                <td><span class="badge badge-pill badge-success"><i class="fas fa-check"></i></td>
+                                <td></span>
+                                </td>
+                                <td></td>
+                            </tr>
+                            <tr>
                                 <td>C</td>
                                 <td></td>
                                 <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></td>
+                                <td></td>
+                            </tr>
+                            <tr>
+                                <td>Bash Scripting</td>
+                                <td></td>
+                                <td><span class="badge badge-pill badge-primary"><i class="fas fa-check"></i></span>
+                                </td>
                                 <td></td>
                             </tr>
                             <tr>
@@ -176,7 +182,10 @@
                     </div>
                     <p>
                         I am a Software Developer/Web Developer currently enrolled at Trent University for a BSc Honours
-                        in Computer Science co-op.
+                        in Computer Science co-op. I have a considerable amount of experience working with HTML/CSS/JS/PHP and some related technologies.
+                        I have also worked with C#, C, Java, and MySQL for various assignments through school. I am also familiar with various
+                        software development techniques such as User Stories, Agile SD, UML and other Modelling Techniques, Accessibility and Responsivity
+                        concerns.
                     </p>
                     <div class="d-flex justify-content-left w-50">
                         <h2>Learning Currently</h2>
@@ -184,6 +193,18 @@
                     <p>
                        Currently I am taking the following five courses: Data Mining, Comparative Programming Languages, Data Visualization,
                        Software Specifications and Development, and Formal Languages and Automation.
+                    </p>
+
+                    <p>
+                       After this semester I should have a basic understanding in Data Mining and Visualization techniques in both R and Python.
+                       This includes talking about classification techniques, preprocessing techniques, and implementing basic data mining concepts
+                       through Weka and Python. 
+                    </p>
+
+                    <p>
+                       In addition I will have a further understanding of programming languages in general which will improve my ability to learn new languages
+                       on the fly. In addition I will have a better understanding of Business Use Cases, Software Specifications, and how to communicate
+                       between clients and developers. 
                     </p>
                     <div class="d-flex justify-content-left w-50">
                         <h2>Inquiries?</h2>
