--- a/projects.html
+++ b/projects.html
@@ -32,10 +32,24 @@
                   <h5 class="card-title">Flashcard Extension</h5>
                   <p class="card-text">This chrome flashcard extension came 2nd and won audience choice in the Hackworks HackInstead Hackathon in August 2020.
                     </p>
-                  <a href="https://github.com/EvanCampbellWeiner/flashcards" class="btn btn-light"><i class="fab fa-github"></i> Github</a> 
+                  <a href="https://github.com/EvanCampbellWeiner/flashcards" class="btn btn-light"><i class="fab fa-github"></i> Github</a>
+                  <a href="https://www.loom.com/share/49082435c23b44a6995028b2237884d3" class="btn btn-success">Demo Video</a>  
                 </div>
               </div>
             </div>
+
+            <!-- Digital For Good Quiz -->
+            <div class="col-lg-3 mt-2">
+              <div class="card text-white bg-dark border-white">
+                <img class="card-img-top projectimage" src="img/plasticoceans.png" alt="Image of the Start Screen for Plastic Oceans Plastic Calculator">
+                <div class="card-body">
+                  <h5 class="card-title">Plastic Oceans Consumption Quiz</h5>
+                  <p class="card-text">This was a project that I worked on for Capital One's Digital for Good Hackathon in November 2020. I did the front-end programming for the project. </p>
+                  <a href="plasticoceans/index.html" class="btn btn-success">Live Demo!</a>
+                </div>
+              </div>
+            </div>
+            
 
             <!-- Lara-Admin-Starter -->
             <div class="col-lg-3 mt-2">
@@ -61,7 +75,9 @@
                 </div>
               </div>
             </div>
+          </div>
 
+          <div class="row">
             <!-- BCW Books-->
             <div class="col-lg-3 mt-2">
               <div class="card text-white bg-dark border-white">
@@ -73,9 +89,8 @@
                 </div>
               </div>
             </div>
-          </div>
 
-          <div class="row">
+
             <!-- Motivania -->
             <div class="col-lg-3 mt-2">
               <div class="card text-white bg-dark border-white">
@@ -111,7 +126,6 @@
                 </div>
               </div>
             </div>
-
           </div>
         </div>
 
